--- a/src/styles/components/ExperienceBar.module.css
+++ b/src/styles/components/ExperienceBar.module.css
@@ -1,6 +1,8 @@
 .experienceBar {
   display: flex;
   align-items: center;
+  /* padding-bottom: 1rem; */
+  margin-bottom: 1rem;
 }
 
 .experienceBar span {
